--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fsw-finace-ai",
+  "name": "finance-ai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -22,11 +22,10 @@
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "git-commit-msg-linter": "^5.0.8",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "14.2.15",
     "prisma": "^5.21.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -42,7 +41,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.16",
+    "eslint-config-next": "14.2.15",
     "husky": "^9.1.6",
     "lint-staged": "^12.3.2",
     "postcss": "^8",
